<resources>
    <string name="app_name">UsersApiJS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tituloitem">titulo</string>
    <string name="favorito">favortip</string>
    <string name="des">description</string>
    <string name="emailReg">Id del usuario</string>
    <string name="sign_inLog">INICIAR SESION</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="social_site_button">Social site button</string>
    <string name="todo">TODO</string>
</resources>