<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"        android:layout_width="match_parent"        android:layout_height="wrap_content"    app:cardCornerRadius="20dp"    android:layout_marginTop="2dp"    android:layout_marginEnd="2sp"    android:layout_marginStart="2sp"    app:cardElevation="3dp"    app:cardBackgroundColor="@color/white"        tools:layout_editor_absoluteX="1dp"        tools:layout_editor_absoluteY="141dp" >    <androidx.constraintlayout.widget.ConstraintLayout        android:layout_width="match_parent"        android:layout_height="wrap_content">        <androidx.appcompat.widget.LinearLayoutCompat            android:id="@+id/linearLayoutCompat2"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="horizontal"            android:weightSum="3"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent">            <androidx.appcompat.widget.LinearLayoutCompat                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_weight="2"                android:orientation="vertical">                <TextView                    android:id="@+id/txttitulo"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="8dp"                    android:layout_marginTop="16dp"                    android:text="@string/tituloitem"                    android:textColor="@color/black"                    android:textSize="21sp" />                <TextView                    android:id="@+id/txtDescription"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="8dp"                    android:layout_marginTop="5dp"                    android:textColor="#6D4C41"                    tools:text="@string/des" />            </androidx.appcompat.widget.LinearLayoutCompat>            <ImageView                android:id="@+id/imgbear"                android:layout_width="0dp"                android:layout_height="80sp"                android:layout_weight=".7"                android:src="@drawable/man2" />        </androidx.appcompat.widget.LinearLayoutCompat>        <ImageView            android:id="@+id/btnfavorito"            android:layout_width="50dp"            android:layout_height="50dp"            android:contentDescription="@string/favorito"            android:src="@drawable/ic_favorito"            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat2"            app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat2"            app:layout_constraintHorizontal_bias="1.0"            app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat2"            app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat2"            app:layout_constraintVertical_bias="0.0"            tools:text="Button" />    </androidx.constraintlayout.widget.ConstraintLayout></androidx.cardview.widget.CardView>